second commit add first section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Poppins:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="./images/shapes/shape-2.png"
+      type="image/x-icon"
+    />
+    <title>Mission 2022</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="firstSection">
+      <div class="rightSide">
+        <div class="rightTop">
+          <h1>Satay Focused On</h1>
+          <h1><span>Mission 2022</span></h1>
+        </div>
+        <div class="rightParagraph">
+          <p>
+            I will become a web developer in 2022. It's my mission. I have to
+            work hard for that.Daily i need 5 to 8 hours programming to become a
+            web developer. I love learning to new things. I love programming.
+          </p>
+        </div>
+        <div class="rightButton">
+          <button>
+            <a
+              href="https://www.linkedin.com/in/saidul-islam-7b139317b/"
+              target="_blank"
+              >Explore Me</a
+            >
+          </button>
+        </div>
+      </div>
+      <div class="leftSide">
+        <div class="leftIamges">
+          <img src="./images/person/person-2.png" alt="person2 Image" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
