first section done

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   <body>
     <div class="firstSection">
       <div class="rightSide">
-        <div class="rightTop">
+        <div class="stayFocus">
           <h1>Satay Focused On</h1>
           <h1><span>Mission 2022</span></h1>
         </div>
-        <div class="rightParagraph">
+        <div class="paragraph">
           <p>
             I will become a web developer in 2022. It's my mission. I have to
             work hard for that.Daily i need 5 to 8 hours programming to become a
             web developer. I love learning to new things. I love programming.
           </p>
         </div>
-        <div class="rightButton">
+        <div class="explore-btn">
           <button>
             <a
               href="https://www.linkedin.com/in/saidul-islam-7b139317b/"
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="leftSide">
-        <div class="leftIamges">
+        <div class="photo">
           <img src="./images/person/person-2.png" alt="person2 Image" />
         </div>
       </div>
