first section complete fully

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             >
           </button>
         </div>
+        <div class="paragraph">
+          <p>Scroll down to explore more About Me.</p>
+        </div>
       </div>
       <div class="leftSide">
         <div class="photo">
