section clear done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             >
           </button>
         </div>
-        <div class="paragraph">
+        <div class="paragraph exploreMe">
           <p>Scroll down to explore more About Me.</p>
         </div>
       </div>
