--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- first section start -->
     <div class="firstSection">
+      <!-- first section right side start -->
       <div class="rightSide">
         <div class="stayFocus">
           <h1>Satay Focused On</h1>
@@ -45,10 +47,19 @@
           <p>Scroll down to explore more About Me.</p>
         </div>
       </div>
+      <!-- first section right side end -->
+      <!-- first section left side start -->
       <div class="leftSide">
         <div class="photo">
           <img src="./images/person/person-2.png" alt="person2 Image" />
         </div>
+      </div>
+    </div>
+    <!-- first section end -->
+    <!-- second section start -->
+    <div class="secondSection">
+      <div class="mymission">
+        <h1>My Mission in <span>2022</span></h1>
       </div>
     </div>
   </body>
