second section done

--- a/index.html
+++ b/index.html
@@ -61,6 +61,52 @@
       <div class="mymission">
         <h1>My Mission in <span>2022</span></h1>
       </div>
+      <div class="allDivision">
+        <div class="mission">
+          <div class="missionImg">
+            <img
+              src="./images/illustrators/illustrator-1.png"
+              alt="mission iamge"
+            />
+          </div>
+          <div class="missionContent">
+            <h2>Mission</h2>
+            <p>
+              My mission to daily work for learning web development. Learning
+              new things. Explore the world.
+            </p>
+          </div>
+        </div>
+        <div class="vission">
+          <div class="missionImg">
+            <img
+              src="./images/illustrators/illustrator-2.png"
+              alt="vission image"
+            />
+          </div>
+          <div class="missionContent">
+            <h2>Vission</h2>
+            <p>
+              My Vision is to start a technology Business. I want to start my
+              start-up journey after learnig web-development course from
+              Programming Hero.
+            </p>
+          </div>
+        </div>
+        <div class="goal">
+          <div class="missionImg">
+            <img src="./images/illustrators/illustrator-3.png" alt="" />
+          </div>
+          <div class="missionContent">
+            <h2>Goal</h2>
+            <p>
+              My Daily Goal is to finish what is teaches by jhankar mahbub.Thnak
+              you Programming hero team and jhankar mahbub for Help me.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- second section end -->
   </body>
 </html>
