add third section

--- a/index.html
+++ b/index.html
@@ -108,5 +108,39 @@
       </div>
     </div>
     <!-- second section end -->
+
+    <!-- third section start -->
+
+    <div class="thirdSection">
+      <!-- third section left side -->
+      <div class="leftImage">
+        <div class="photo">
+          <img src="./images/pictures/coding.png" alt="person2 Image" />
+        </div>
+      </div>
+      <!-- third section right side start -->
+      <div class="thirdSectionRight">
+        <div class="thirdSectionRightTop">
+          <h1>Develop</h1>
+          <h1>Without Limits</h1>
+        </div>
+        <div class="thirdSectionRightCotent">
+          <p>
+            I will become a web developer in 2022. It's my mission. I have to
+            work hard for that.Daily i need 5 to 8 hours programming to become a
+            web developer. I love learning to new things. I love programming.
+          </p>
+        </div>
+        <div class="second-btn">
+          <button>
+            <a
+              href="https://www.linkedin.com/in/saidul-islam-7b139317b/"
+              target="_blank"
+              >Read The Documentation</a
+            >
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
