add content 3rd section

--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
         </div>
         <div class="thirdSectionRightCotent">
           <p>
-            I will become a web developer in 2022. It's my mission. I have to
-            work hard for that.Daily i need 5 to 8 hours programming to become a
-            web developer. I love learning to new things. I love programming.
+            Web Development is a demanable job all over the world.I am learning
+            web development from Programming Hero.
           </p>
         </div>
         <div class="second-btn">
