four section done

--- a/index.html
+++ b/index.html
@@ -141,5 +141,40 @@
         </div>
       </div>
     </div>
+    <!-- third section end -->
+
+    <!-- four section start -->
+    <div class="fourSection">
+      <!-- third section right side start -->
+      <div class="fourSectionLeft">
+        <div class="fourSectionLeftTop">
+          <h1>Know our</h1>
+          <h1>Global Community</h1>
+        </div>
+        <div class="fourSectionLeftCotent">
+          <p>
+            Web development is the coding or programming that enables Website
+            functionality, per the owner's requirements. It mainly deals with
+            the non-design aspect of building websites, which includes coding
+            and writing markup.
+          </p>
+        </div>
+        <div class="second-btn">
+          <button>
+            <a
+              href="https://www.linkedin.com/in/saidul-islam-7b139317b/"
+              target="_blank"
+              >Read The Documentation</a
+            >
+          </button>
+        </div>
+      </div>
+      <!-- four section right side -->
+      <div class="rightImage">
+        <div class="photo">
+          <img src="./images/pictures/project.png" alt="project Image" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
