--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./images/shapes/shape-2.png"
+      href="./images/shapes/shape-6.png"
       type="image/x-icon"
     />
     <title>Mission 2022</title>
@@ -25,7 +25,7 @@
       <div class="rightSide">
         <div class="stayFocus">
           <h1>Satay Focused On</h1>
-          <h1><span>Mission 2022</span></h1>
+          <h1><span class="">Mission 2022</span></h1>
         </div>
         <div class="paragraph">
           <p>
@@ -59,7 +59,7 @@
     <!-- second section start -->
     <div class="secondSection">
       <div class="mymission">
-        <h1>My Mission in <span>2022</span></h1>
+        <h1>My Mission in <span class="spClass">2022</span></h1>
       </div>
       <div class="allDivision">
         <div class="mission">
@@ -176,5 +176,14 @@
         </div>
       </div>
     </div>
+    <!-- section 4 end -->
+    <!-- fotter start -->
+    <footer>
+      <div class="footerClass">
+        <h1>Mission <span class="spClass">2022</span></h1>
+        <h5>Hard work, Perseverance, and Determination for 2022</h5>
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
