--- a/index.html
+++ b/index.html
@@ -177,6 +177,28 @@
       </div>
     </div>
     <!-- section 4 end -->
+    <div class="sectionFive">
+      <div class="header">
+        <h1>I Love <span class="spClass">Learning</span></h1>
+      </div>
+      <div class="section5Content">
+        <div class="section5image">
+          <img src="./images/learning/html.jpg" alt="" />
+        </div>
+        <div class="Fivecontent">
+          <h1><span class="spClass">HTML</span>& CSS</h1>
+          <p>
+            <span class="spClass">HTML</span> is the standard markup language
+            for Web pages. With HTML you can create your own Website. HTML is
+            easy to learn - You will enjoy it!
+            <span class="spClass">CSS</span> is the language we use to style an
+            HTML document. CSS describes how HTML elements should be displayed.
+            This tutorial will teach you CSS from basic to advanced.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- fotter start -->
     <footer>
       <div class="footerClass">
